--- a/lecture/ts-webgame/typescript-init.html
+++ b/lecture/ts-webgame/typescript-init.html
@@ -7,6 +7,6 @@
   <title>타입스크립트 적용하기</title>
 </head>
 <body>
-  <script src="typescript-init.ts"></script>
+  <script src="typescript-init.js"></script>
 </body>
 </html>
