--- a/lecture/ts-webgame/scissorRockPaper.html
+++ b/lecture/ts-webgame/scissorRockPaper.html
@@ -7,8 +7,8 @@
   <title>타입스크립트로 가위바위보 만들기</title>
   <style>
     #computer {
-      width:142px;
-      height:200px;
+      width:146px;
+      height:156px;
       border:1px solid #000;
       margin-bottom:20px;
       background-position:0 0;
@@ -16,12 +16,11 @@
   </style>
 </head>
 <body>
-  <div id="computer">
-    <img src="" alt="">
-  </div>
+  <div id="computer"></div>
+  <div id="point"></div>
   <div>
-    <button type="button" id="rock">가위</button>
-    <button type="button" id="scissor">바위</button>
+    <button type="button" id="scissors">가위</button>
+    <button type="button" id="rock">바위</button>
     <button type="button" id="paper">보</button>
   </div>
   <script src="scissorRockPaper.js"></script>
